feat: Add QR code payment integration
Integrates react-qr-code to display UPI payment QR codes. This allows users to scan and pay directly for bundles using their payment apps. Includes logic to construct the UPI payment URI and a copy-to-clipboard function for the UPI ID.

--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
     "react/": "https://esm.sh/react@18.2.0/",
     "react-dom/": "https://esm.sh/react-dom@18.2.0/",
     "react-router-dom": "https://esm.sh/react-router-dom@6.22.3?deps=react@18.2.0,react-dom@18.2.0",
-    "recharts": "https://esm.sh/recharts@2.12.2?deps=react@18.2.0,react-dom@18.2.0"
+    "recharts": "https://esm.sh/recharts@2.12.2?deps=react@18.2.0,react-dom@18.2.0",
+    "react-qr-code": "https://esm.sh/react-qr-code@2.0.15?deps=react@18.2.0"
   }
 }
 </script>
